@@ -1,3 +1,4 @@
+2022-11-26: [FEATURE] Add extended popup to `LiveFootballScores`
 2022-11-24: [BUGFIX] Fix bug where decoration crashes on widget initialised inside a `WidgetBox`
 2022-11-23: [FEATURE] Add extended popups to `ALSAWidget` and `BrightnessControl` (experimental)
 2022-11-22: [FEATURE] Add ability to draw border in different colour in `RectDecoration`
